--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
